--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -8,7 +8,7 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  cupertino_icons: ^1.0.2
+  cupertino_icons: ^1.0.5
 
   # STATE
   get: ^4.6.5
@@ -18,8 +18,9 @@ dependencies:
   chopper: ^5.0.0
 
   # JSON
-  freezed_annotation: ^2.1.0
-  json_annotation: ^4.6.0
+  freezed_annotation: any
+  freezed: any
+  json_annotation: ^4.7.0
 
   # ENV
   flutter_dotenv: ^5.0.2
@@ -30,10 +31,9 @@ dependencies:
 dev_dependencies:
   flutter_test:
     sdk: flutter
-  flutter_lints: ^2.0.0
+  flutter_lints: ^2.0.1
   build_runner: ^2.2.1
-  freezed: ^2.1.0+1
-  json_serializable: ^6.3.2
+  json_serializable: ^6.4.1
   chopper_generator: ^5.0.0+1
 
 flutter:
